--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,24 @@
   </head>
   <body>
     <section class="hero is-primary">
-      <div class="hero-body is-narrow">
+      <div class="hero-body">
         <div class="container">
-          <h1 class="title">
-            Shaking Dog / CECS Register
-          </h1>
+          <h1 class="title">Shaking Dog / CECS Register</h1>
         </div>
       </div>
     </section>
     <section class="section" id="app">
     </section>
   </body>
+  <footer class="footer">
+    <div class="container">
+      <div class="content has-text-centered">
+        <p>
+          <strong>Created</strong> by <a href="https://bitbucket.org/ishkanan/">Anthony Ishkan</a>. The source code is licensed
+          <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+          is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+        </p>
+      </div>
+    </div>
+  </footer>
 </html>
