Add favicon. Tweak radio spacing.

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="/app/favicon.ico" />
   </head>
   <body>
     <section class="hero is-primary">
