Finish new dog functionality. Refactor composite action creators.

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
         </div>
       </div>
     </section>
-    <section class="section" id="app">
+    <section class="section">
+      <div className="container" id="app">
+      </div>
     </section>
   </body>
   <footer class="footer">
