--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Shaking Dog Register</title>
+    <title>SLEM Register</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
@@ -13,13 +13,11 @@
     <section class="hero is-primary">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title">Shaking Dog Register</h1>
+          <h1 class="title">SLEM Register</h1>
         </div>
       </div>
     </section>
-    <section class="section">
-      <div className="container" id="app">
-      </div>
+    <section class="section" id="app">
     </section>
   </body>
   <footer class="footer">
